--- a/app/views/client_products/index.html.erb
+++ b/app/views/client_products/index.html.erb
@@ -1,7 +1,31 @@
+<ul>
+  <li>
+    Sort By
+    <ul>
+      <li><a href="/client/products?sort_by=price">Price - Low to High</a></li>
+      <li><a href="/client/products?sort_by=price&&sort_order=desc">Price - High to Low</a></li>
+      <li><a href="/client/products?sort_by=name">Name - A to Z</a></li>
+      <li><a href="/client/products?sort_by=name&&sort_order=desc">Name - Z to A</a></li>
+    </ul>
+  </li>
+</ul>
+<%= form_tag "/client/products", method: :get do %>
+<input type="text" name="search"> 
+<input type="submit" value="Search">
+<% end %>
+
+
 <% @products.each do |product| %>
-<h2><a href="/client/products/<%= product["id"] %>"/<%= product["title"] %></h2>
-<h3>:Name <%= product["name"] %><h3>
-<h4>:Price <%= product["price"] %><h4>
+<h2><a href="/client/products/<%= product["id"] %>"/<%= product["title"] %></a></h2>
+
+ <% if product["discounted"] %>
+ <h3>Discount Item!</h3>
+ <% else %>
+ <h3>Everyday Value!</h3>
+ <% end %> 
+
+<h3>style="color: red;"><%= product["formatted"]["price"] %></h3>
+<h4>:Price <%= product["price"] %></h4>
 <h5>:Description <%= product["description"] %><h5>
 <br>
 <% end %>i
