--- a/app/views/client_products/new.html.erb
+++ b/app/views/client_products/new.html.erb
@@ -10,6 +10,9 @@
   Image_url: <input type="text" name="image_url">
   </div>
   <div>
+  Supplier ID: <input type="text" name="supplier_id">
+</div>
+  <div>
     Description: <input type="text" name="description">
   </div>
   <input type="submit" value="Create Product">
