--- a/app/views/client_products/edit.html.erb
+++ b/app/views/client_products/edit.html.erb
@@ -8,6 +8,8 @@
 <div>
   Image_url: <input type="text" name="image_url" value="<% @product['image_url'] %> ">
   </div>
+  Supplier ID: <input type="text" name="supplier_id" value="<% @product["supplier_id"] %> ">
+</div>
   <div>
     Description: <input type="text" name="description" value="<% @product['description'] %> ">
   </div>
