--- a/app/views/client_products/show.html.erb
+++ b/app/views/client_products/show.html.erb
@@ -1,11 +1,13 @@
 <h2><%= @product["title"] %></h2>
-<h3>Price: <%= @product["price"] %><h3>
-<h4>Tax: <%= @product["tax"] %><h4>
-<h4>Total: <%= @product["total"] %><h4>
-<h4>Description: <%= @product["description"] %><h4>
+<h3>Price: <%= @product["price"] %></h3>
+<h4>Tax: <%= @product["tax"] %></h4>
+<h4>Total: <%= @product["total"] %></h4>
+<h4>Description: <%= @product["description"] %></h4>
 <h6>Supplier: <%= @product["supplier"]["name"] %></h6>
-<img src="<%= @product["image_url"] %>">
 
+<% @product["images"].each do |image| %>
+<img src="<%= image["url"] %>">
+<% end %>
 <a href="/client/products/<%= @product['id']%>/edit">Edit</a>
 <a href="/client/products/<%= @product['id]'%>" data-method="delete">Delete</a>
 
