--- a/app/views/client/orders/new.html.erb
+++ b/app/views/client/orders/new.html.erb
@@ -1,4 +1,4 @@
-<% form_tag "client/orders", method: :post do %>
+<%= form_tag "client/orders", method: :post do %>
   <div>
     Product ID: <input type="text" name="product_id">
   </div>
