--- a/app/views/client/orders/show.html.erb
+++ b/app/views/client/orders/show.html.erb
@@ -1,7 +1,12 @@
-<h2>Order Id <%= @order["id"] %></h2>
-<h3>User ID: <%= @order["user_id"] %></h3>
-<h4>Product ID: <%= @order["product_id"] %></h4>
-<h4>Quantity: <%= @order["quantity"] %></h4>
-<h4>Subtotal: <%= @order["subtotal"] %></h4>
-<h4>Tax: <%= @order["tax"] %></h4>
-<h4>Total: <%= @order["total"] %></h4>
+<h1>Order #<%= @order['id'] %></h1>
+<h6>purchased on <%= @order['purchased_on'] %></h6>
+<h2>Customer: <%= @order['user']['email'] %></h2>
+<h2>Product Name: <%= @order['product']['name'] %></h2>
+
+<img src="<%= @order['product']['images'][0]['url'] %>">
+<h2>Price: <%= @order['product']['formatted']['price'] %></h2>
+<h2>Quantity: <%= @order['quantity'] %></h2>
+
+<h2>Subtotal: <%= @order['formatted]['subtotal'] %></h2>
+<h2>Tax: <%= @order['formatted]['tax'] %></h2>
+<h2>Total: <%= @order['formatted]['total'] %></h2>
