--- a/app/views/client/orders/new.html.erb
+++ b/app/views/client/orders/new.html.erb
@@ -1,11 +1,9 @@
-<%= form_tag "client/orders", method: :post do %>
+<%= form_tag "/client/orders", method: :post do %>
   <div>
     Product ID: <input type="text" name="product_id">
   </div>
-<div>
-  Quantity: <input type="text" name="quantity">
-</div>
-
+  <div>
+    Quantity: <input type="text" name="quantity">
+  </div>
   <input type="submit" value="Create Order">
-<!-- </form> -->
 <% end %>
