--- a/app/views/client_products/new.html.erb
+++ b/app/views/client_products/new.html.erb
@@ -1,18 +1,15 @@
-<!-- <form action="/client/products" method="post"> -->
-  <% form_tag "client/products", method: :post do %>
+<%= form_tag "/client/products", method: :post do %>
   <div>
-    Name: <input type="text" name="name">
+    Name: <input type="text" name="name" />
   </div>
-<div>
-  Price: <input type="text" name="price">
-</div>
-
   <div>
-  Supplier ID: <input type="text" name="supplier_id">
-</div>
-  <div>
-    Description: <input type="text" name="description">
+    Price: <input type="text" name="price" />
   </div>
-  <input type="submit" value="Create Product">
-<!-- </form> -->
+  <div>
+    Description: <input type="text" name="description" />
+  </div>
+  <div>
+    Supplier ID: <input type="text" name="supplier_id">
+  </div>
+  <input type="submit" name="" value="Create Product" />
 <% end %>
