--- a/app/views/client/products/index.html.erb
+++ b/app/views/client/products/index.html.erb
@@ -5,8 +5,14 @@
       <li><a href="/client/products?sort_by=price">Price - Low to High</a></li>
       <li><a href="/client/products?sort_by=price&&sort_order=desc">Price - High to Low</a></li>
       <li><a href="/client/products?sort_by=name">Name - A to Z</a></li>
-      <li><a href="/client/products?sort_by=name&&sort_order=desc">Name - Z to A</a></li>
-    </ul>
+      <li><a href="/client/products?sort_by=name&&sort_order=desc">Name - Z to A</a>
+      </li>
+      <li>
+        Categories
+        <ul>
+      <li><a href="/client/products?category=Fast">Fast</a></li>
+      <li><a href="/client/products?category=Utility">Utility</a></li>
+      <li><a href="/client/products?category=Luxury">Luxury</a></li>    </ul>
   </li>
 </ul>
 
