--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
     <a href="/login">Log In</a>
     <a href="/logout" data-method="delete">Log Out</a>
     <br>
+    <a href="/client/carted_products">Cart</a>
     <% flash.each do |name, message| %>
     <br>
       <p><%= message %></p>
