--- a/app/views/client/products/edit.html.erb
+++ b/app/views/client/products/edit.html.erb
@@ -1,3 +1,12 @@
+<% if @errors  %>
+<ul>
+  <% @errors.each do |error| %>
+  <li><%= error %></li>
+  <% end %>
+</ul>
+<% end %>
+
+
 <%= form_tag "/client/products/#{@product["id"]}", method: :patch do %>
   <div>
     Name: <input type="text" name="name" value="<%= @product["name"] %>" />
